--- a/index.html
+++ b/index.html
@@ -2,11 +2,96 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HipTro</title>
+    <title>Hiptro</title>
+    <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
-<p>Hello World</p>
+<header>
+    <div id="test">
+    <section class="logo">
+        <img src="images/HIPTROlogo_v.3.svg" alt="Logo">
+    </section>
+    <div class="menu">
+menu
+    </div>
+    </div>
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Shop</a></li>
+            <li><a href="#">DIY-hjørnet</a></li>
+            <li><a href="#">Om os</a></li>
+        </ul>
+    </nav>
+</header>
+
+<!-- MAIN INDHOLD-->
+<main>
+
+    <!-- LINK TIL PRODUKTER -->
+    <section class="picbox">
+        <img class="picsettings" src="">
+        <section class="picboxtext">
+
+        </section>
+    </section>
+
+    <!-- LINK TIL DIY -->
+    <section class="picbox">
+        <img class="picsettings" src="">
+        <section class="picboxtext">
+
+        </section>
+    </section>
+
+    <!-- PRODUKTER SLIDER -->
+    <section class="sliderfront">
+        <!--TEKST-->
+        <h2>
+
+        </h2>
+        <!--SLIDER-->
+        <section class="produktslider">
+            <img class="sliderpic" src="">
+            <img class="sliderpic" src="">
+            <img class="sliderpic" src="">
+            <img class="sliderpic" src="">
+            <img class="sliderpic" src="">
+        </section>
+    </section>
+
+    <!--OM OS LINK -->
+    <section class="picbox">
+        <img class="picsettings" src="">
+        <section class="picboxtext">
+
+        </section>
+    </section>
+
+    <!-- UPLOAD INSPIRATION -->
+    <section class="upload">
+        <!--OVERSKRIFT-->
+        <h2>Upload Tips & Tricks</h2>
+        <!--UPLOAD FORM-->
+        <form>
+            <input type="text" name="name" value="Navn"><br>
+            <input type="email" name="email" value="Mail"><br>
+            <input type="text" name="headline" value="Titel"><br>
+            <input type="file" name="file"><br>
+            <input type="submit" value="Indsend">
+        </form>
+    </section>
+
+</main>
+
+<footer>
+
+</footer>
+
+<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="js/menu.js"></script>
 
 </body>
 </html>
