Header tilføjet på alle sider

--- a/index.html
+++ b/index.html
@@ -8,21 +8,23 @@
 </head>
 <body>
 
-<header>
-    <div id="test">
-    <section class="logo">
-        <img src="images/HIPTROlogo_v.3.svg" alt="Logo">
-    </section>
-    <div class="menu">
-menu
+<header class="header1">
+    <div class="logo">
+        <a href="index.html">
+            <img src="images/HIPTROlogo_v.3.svg" alt="Logo">
+        </a>
     </div>
-    </div>
-    <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Shop</a></li>
-            <li><a href="#">DIY-hjørnet</a></li>
-            <li><a href="#">Om os</a></li>
+    <nav class="navbar">
+        <ul class="navul">
+            <li class="navli navliactive">
+                <a href="index.html">Home</a>
+            </li>
+            <li class="navli">
+                <a href="shop.html">Shop</a>
+            </li>
+            <li class="navli">
+                <a href="diy.html">DIY-hjørnet</a>
+            </li>
         </ul>
     </nav>
 </header>
@@ -89,9 +91,6 @@ menu
 <footer>
 
 </footer>
-
-<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-<script src="js/menu.js"></script>
 
 </body>
 </html>
