--- a/shop.html
+++ b/shop.html
@@ -26,9 +26,29 @@
             </li>
         </ul>
     </nav>
+    <img id="shoppingcart" src="images/cart.png" alt="shoppingcart">
 </header>
 
 
+
+
+<footer>
+    <article class="kontaktfelt">
+        <h3>Kontakt os</h3>
+        <p>
+            <b>Tlf.:</b><a href="tel:+4540434905" class="kontaktlink"> +45 40434905</a><br>
+            <b>Mail:</b><a href="mailto:jonas@jonasbonde.dk?Subject=Hello%20again" class="kontaktlink"> jonas@jonasbonde.dk</a><br>
+            <b>Adresse:</b> Staldgaarden 21, 1. <br>
+        </p>
+    </article>
+    <div class="logo">
+        <a href="index.html">
+            <img id="footerimage" src="images/HIPTROlogo_v.3.svg" alt="Logo">
+        </a>
+    </div>
+
+
+</footer>
 
 </body>
 </html>
