produktside med indhold tilføjet. PC grid mangler

--- a/shop.html
+++ b/shop.html
@@ -29,8 +29,137 @@
     <img id="shoppingcart" src="images/cart.png" alt="shoppingcart">
 </header>
 
+<main class="shopmain">
+
+    <!-- SORTERING AF PRODUKTER -->
+    <div class="sortering">
+        <select class="sortmoebel" name="option">
+            <option value="" disabled selected>Møbel</option>
+            <option value="1">Sofa</option>
+            <option value="2">Stol</option>
+            <option value="3">Skammel</option>
+            <option value="3">Bord</option>
+        </select>
+        <select class="colour" name="option">
+            <option value="" disabled selected>Farver</option>
+            <option value="1">Rød</option>
+            <option value="2">Blå</option>
+            <option value="3">Gul</option>
+            <option value="3">Grå</option>
+        </select>
+        <select class="sortmoebel" name="option">
+            <option value="" disabled selected>Stof</option>
+            <option value="1">Nantes</option>
+            <option value="2">Ritz</option>
+        </select>
+        <select class="sorttrae" name="option">
+            <option value="" disabled selected>Træ</option>
+            <option value="1">Eg</option>
+            <option value="2">Bøg</option>
+        </select>
+        <button>Vis</button>
+    </div>
+    <div class="produkt whitepro pro1">
+        <img src="images/produkt.bord.jpg" alt="produkt bord">
+        <div class="funktioner">
+            <div class="produktnavn">
+                <h2>Raw Sofabord - sæt m. 2 stk.</h2>
+                <p>Top i olieret eg / Ben i olieret eg</p>
+            </div>
+            <div class="kobknap">
+                <img src="images/cart.png" alt="køb">
+            </div>
+        </div>
+    </div>
+    <div class="produkt greypro pro2">
+        <img src="images/produkt.blå.stol.jpg" alt="produkt blå stol">
+        <div class="funktioner">
+            <div class="produktnavn">
+                <h2>Monday lænestol</h2>
+                <p>Nantes-stof / Støv blå / Olieret bøg
+                </p>
+            </div>
+            <div class="kobknap">
+                <img src="images/cart.png" alt="køb">
+            </div>
+        </div>
+    </div>
+    <div class="produkt whitepro pro3">
+        <img src="images/produkt.bord.stole.jpg" alt="produkt bord+stole">
+        <div class="funktioner">
+            <div class="produktnavn">
+                <h2>Friday spisebord + 4 stole</h2>
+                <p>Bord + 4 stole / Olieret bøg</p>
+            </div>
+            <div class="kobknap">
+                <img src="images/cart.png" alt="køb">
+            </div>
+        </div>
+    </div>
+    <div class="produkt greypro pro4">
+        <img src="images/produkt.grå.sofa.jpg" alt="produkt grå sofa">
+        <div class="funktioner">
+            <div class="produktnavn">
+                <h2>Lazy Day 3 pers. sofa</h2>
+                <p>Nantes-stof / Dark Grey / Skum</p>
+            </div>
+            <div class="kobknap">
+                <img src="images/cart.png" alt="køb">
+            </div>
+        </div>
+    </div>
+    <div class="produkt whitepro pro5">
+        <img src="images/produkt.gul.sofa.jpg" alt="produkt gul sofa">
+        <div class="funktioner">
+            <div class="produktnavn">
+                <h2>Scandinavian Remix 2 pers. sofa</h2>
+                <p>Ritz-stof / Curry / Dun</p>
+            </div>
+            <div class="kobknap">
+                <img src="images/cart.png" alt="køb">
+            </div>
+        </div>
+    </div>
+    <div class="produkt greypro pro6">
+        <img src="images/produkt.gul.stol.jpg" alt="produkt gul stol">
+        <div class="funktioner">
+            <div class="produktnavn">
+                <h2>Tuckin Lænestol</h2>
+                <p>Nantes-stof / Curry & White / Olieret bøg</p>
+            </div>
+            <div class="kobknap">
+                <img src="images/cart.png" alt="køb">
+            </div>
+        </div>
+    </div>
+    <div class="produkt whitepro pro7">
+        <img src="images/produkt.rød.stol.jpg" alt="produkt roed stol">
+        <div class="funktioner">
+            <div class="produktnavn">
+                <h2>Dude Lænestol</h2>
+             <p>Ritz-stof / Virgin Red / Hvidolieret eg</p>
+            </div>
+            <div class="kobknap">
+              <img src="images/cart.png" alt="køb">
+            </div>
+        </div>
+    </div>
+    <div class="produkt greypro pro8">
+        <img src="images/produkt.skammel.jpg" alt="produkt skammel">
+        <div class="funktioner">
+            <div class="produktnavn">
+                <h2>Wood Barstol</h2>
+                <p>Hvidolieret eg / Eg</p>
+            </div>
+            <div class="kobknap">
+                <img src="images/cart.png" alt="køb">
+            </div>
+        </div>
+    </div>
 
 
+
+</main>
 
 <footer>
     <article class="kontaktfelt">
@@ -38,7 +167,7 @@
         <p>
             <b>Tlf.:</b><a href="tel:+4540434905" class="kontaktlink"> +45 40434905</a><br>
             <b>Mail:</b><a href="mailto:jonas@jonasbonde.dk?Subject=Hello%20again" class="kontaktlink"> jonas@jonasbonde.dk</a><br>
-            <b>Adresse:</b> Staldgaarden 21, 1. <br>
+            <b>Adresse:</b> Staldgaarden 21, 1.<br>
         </p>
     </article>
     <div class="logo">
