Shop færdig. Font tilføjet (Apex New)

--- a/shop.html
+++ b/shop.html
@@ -148,7 +148,7 @@
         <img src="images/produkt.skammel.jpg" alt="produkt skammel">
         <div class="funktioner">
             <div class="produktnavn">
-                <h2>Wood Barstol</h2>
+                <h2>Wood. Barstol</h2>
                 <p>Hvidolieret eg / Eg</p>
             </div>
             <div class="kobknap">
