--- a/diy.html
+++ b/diy.html
@@ -5,6 +5,7 @@
     <title>Tips & Tricks</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300|Roboto+Slab" rel="stylesheet">
 </head>
 <body>
 <header class="header1">
@@ -29,121 +30,163 @@
     <img id="shoppingcart" src="images/cart.png" alt="shoppingcart">
 </header>
 <!-- Main indhold -->
-<article class="maindyi">
-    <article>
-        <h1>12 hipster home decorating tips and tricks</h1>
-            <p>
-    Adding some hipster style to your home is one way of ensuring that it stays on-trend, current and invitingly creative. 
 
-    What’s really lovely about this particular style trend is that it’s easy and affordable to put together, and in essence, the décor remains intrinsically about who you are and what you like, instead of merely following trends. 
+<main class="maindiy">
+    <article class="head">
+        <div class="tekstdiy">
+            <h2>12 hipster home decorating tips and tricks</h2>
+                <p>
+                    Adding some hipster style to your home is one way of ensuring that it stays on-trend, current and invitingly creative. 
 
-    Here are tips on how to incorporate hipster décor into your home:
-            </p>
+                    What’s really lovely about this particular style trend is that it’s easy and affordable to put together, and in essence, the décor remains intrinsically about who you are and what you like, instead of merely following trends. 
+
+                    Here are tips on how to incorporate hipster décor into your home:
+                </p>
+        </div>
     </article>
-    <article>
-        <h2>
-    1. Select items carefully
-        </h2>
-            <p>
-    Don’t buy for the sake of buying, rather choose pieces that mean something to you. 
-    A few carefully selected pieces of furniture that you adore can make a far bigger statement than cluttering your space with everything you own. 
-    Only include items you connect with, whether sentimentally or aesthetically, and choose items that harmonize best with the overall look.
-            </p>
+    <article class="white w1">
+        <div class="tekstdiy">
+            <h2>
+                 Select items carefully
+            </h2>
+                <p>
+                    Don’t buy for the sake of buying, rather choose pieces that mean something to you. 
+                    A few carefully selected pieces of furniture that you adore can make a far bigger statement than cluttering your space with everything you own. 
+                    Only include items you connect with, whether sentimentally or aesthetically, and choose items that harmonize best with the overall look.
+                </p>
+        </div>
     </article>
-    <article>
-        <h2>
-    2. Go retro
-        </h2>
-            <p>
-    In hipster culture, retro is always cool. There is always room for 50's-inspired décor such as checkered flooring and diner-inspired furniture.
-            </p>
+    <article class="grey w2">
+        <div class="tekstdiy">
+            <h2>
+                 Go retro
+            </h2>
+                <p>
+                    In hipster culture, retro is always cool. There is always room for 50's-inspired décor such as checkered flooring and diner-inspired furniture.
+                </p>
+        </div>
     </article>
-    <article>
-        <h2>
-    3. Industrial inspiration 
-        </h2>
-            <p>
-    Any kind of interior space or item that was formerly used for industrial purposes is hipster heaven. Even furniture that offers small elements of industrial design will add to the integrity of the overall vision.
-            </p>
+
+    <article class="white w3">
+        <div class="tekstdiy">
+            <h2>
+                 Industrial inspiration 
+            </h2>
+                <p>
+                    Any kind of interior space or item that was formerly used for industrial purposes is hipster heaven. Even furniture that offers small elements of industrial design will add to the integrity of the overall vision.
+                </p>
+        </div>
     </article>
-    <article>
-        <h2>
-    4. Get it framed
-        </h2>
-            <p> 
-    Frames are not solely for framing family photos, they can also be used to frame any number of interesting things like old-fashioned postcards and portraits, small modern art pieces and a variety of collectibles. 
-    Why not create a hipster-inspired feature wall by covering an entire wall in a collection of frames of different shapes, sizes and materials?
-            </p>
+    <article class="grey w4">
+        <div class="tekstdiy">
+            <h2>
+                 Get it framed
+            </h2>
+                <p> 
+                    Frames are not solely for framing family photos, they can also be used to frame any number of interesting things like old-fashioned postcards and portraits, small modern art pieces and a variety of collectibles. 
+                    Why not create a hipster-inspired feature wall by covering an entire wall in a collection of frames of different shapes, sizes and materials?
+                </p>
+        </div>
     </article>
-    <article>
-        <h2>
-    5. Add whimsy and chandeliers
-        </h2>
-            <p>
-    Limited edition toys and collectibles, and cult-ish toys and sculptures should all be put proudly out on display. 
-    Chandeliers are an easy way of instantly glamming up any space as they provide a great visual contrast.
-            </p>
+    <article class="white w5">
+        <div class="tekstdiy">
+            <h2>
+                  Add whimsy and chandeliers
+            </h2>
+                <p>
+                    Limited edition toys and collectibles, and cult-ish toys and sculptures should all be put proudly out on display. 
+                    Chandeliers are an easy way of instantly glamming up any space as they provide a great visual contrast.
+                </p>
+        </div>
     </article>
-    <h2>
-        6. Wonderful words
-    </h2>
-    <p>
-    Phrases and words that inspire, or slightly provocative slogans that will make you think or smile, laid out in oversized or creative fonts can be used to add a touch of laidback hipsterness.
-    </p>
-    <h2>
-    7. Relax and unwind
-    </h2>
-    <p>
-    Hipster décor is all about the big ‘chillax’. In order to create spaces that will invite you to unwind, sprawl out and get comfy, there should always be an abundance of pillows, blankets, rugs and beanbags in any hipster abode worth its salt. 
-    Adding hand-knitted cotton poofs or including a variety of scatter cushions are ideal for creating a space that is warm and comfy. 
-    </p>
-    <h2>
-        8. Display your interests
-    </h2>
-    <p>
-    Find a way of incorporating your favorite things into the décor. For example, you can mount vinyl record covers of your favorite singers and bands to show what music you love. This will add volumes of hipster character to your home.
-    </p>
-    <h2>
-    9. Mix it up 
-    </h2>
-    <p>
-    Avoid being too matchy-matchy. Try and include different pieces from different ranges and eras, made from different materials. 
-    </p>
-    <h2>
-        10. Feeling exposed
-    </h2>
-    <p>
-    Gritty, raw elements like exposed brick and raw timber, balanced with cosy, lighter accents create a unique style blend. 
-    Remember, one way to make raw elements ‘pop’ is to juxtapose them with something that is super finished and slick.
-    </p>
-    <h2>
-        11. Express yourself
-    </h2>
-    <p>
-    Don't shy away from showcasing the things that you cherish. Displaying trinkets that remind you of something or somebody special will make you a happier person who is reminded more often of the importance of being grateful. It will also make your space more personal and unique.
-    </p>
-    <h2>
-    12. Vintage chic 
-    </h2>
-    <p>
-    Look for old-fashioned looking items that will add to the mix-and-match hipster undertones of a space.
-     Even if the items are new and only have an old-fashioned vibe, they will make an interesting addition to the space.
-    </p>
-</article>
+    <article class="grey w6">
+        <div class="tekstdiy">
+            <h2>
+                 Wonderful words
+            </h2>
+                <p>
+                    Phrases and words that inspire, or slightly provocative slogans that will make you think or smile, laid out in oversized or creative fonts can be used to add a touch of laidback hipsterness.
+                </p>
+        </div>
+    </article>
+    <article class="white w7">
+        <div class="tekstdiy">
+            <h2>
+                 Relax and unwind
+            </h2>
+                <p>
+                    Hipster décor is all about the big ‘chillax’. In order to create spaces that will invite you to unwind, sprawl out and get comfy, there should always be an abundance of pillows, blankets, rugs and beanbags in any hipster abode worth its salt. 
+                    Adding hand-knitted cotton poofs or including a variety of scatter cushions are ideal for creating a space that is warm and comfy. 
+                </p>
+        </div>
+    </article>
+    <article class="grey w8">
+        <div class="tekstdiy">
+             <h2>
+                  Display your interests
+            </h2>
+                <p>
+                    Find a way of incorporating your favorite things into the décor. For example, you can mount vinyl record covers of your favorite singers and bands to show what music you love. This will add volumes of hipster character to your home.
+                </p>
+        </div>
+    </article>
+    <article class="white w9">
+        <div class="tekstdiy">
+            <h2>
+                 Mix it up 
+            </h2>
+                <p>
+                    Avoid being too matchy-matchy. Try and include different pieces from different ranges and eras, made from different materials. 
+                </p>
+        </div>
+    </article>
+    <article class="grey w10">
+        <div class="tekstdiy">
+            <h2>
+                 Feeling exposed
+            </h2>
+                <p>
+                    Gritty, raw elements like exposed brick and raw timber, balanced with cosy, lighter accents create a unique style blend. 
+                    Remember, one way to make raw elements ‘pop’ is to juxtapose them with something that is super finished and slick.
+                </p>
+        </div>
+    </article>
+    <article class="white w11">
+        <div class="tekstdiy">
+            <h2>
+                 Express yourself
+            </h2>
+                <p>
+                    Don't shy away from showcasing the things that you cherish. Displaying trinkets that remind you of something or somebody special will make you a happier person who is reminded more often of the importance of being grateful. It will also make your space more personal and unique.
+                </p>
+        </div>
+    </article>
+    <article class="grey w12">
+        <div class="tekstdiy">
+            <h2>
+                 Vintage chic 
+            </h2>
+                <p>
+                    Look for old-fashioned looking items that will add to the mix-and-match hipster undertones of a space.
+                    Even if the items are new and only have an old-fashioned vibe, they will make an interesting addition to the space.
+                </p>
+        </div>
+    </article>
+
 
 
 <!-- links til inspiration -->
 
-<article class="externe">    Links til inspiration og guides til at lave dine egne møbler
-    <div> Ide og guide til at lave en lampe<br>
-        klik på linket herunder
-
-        http://www.apartmenttherapy.com/diy-project-idea-how-to-make-a-lamp-out-of-anything-apartment-therapy-tutorials-189083
+<article class="white tekstdiy w13">
+    <div class="tekstdiy">
+        <h2>Links til inspiration og guides til at lave dine egne møbler</h2>
+        <p>Ide og guide til at lave en lampe</p>
+        <a href="http://www.apartmenttherapy.com/diy-project-idea-how-to-make-a-lamp-out-of-anything-apartment-therapy-tutorials-189083">Klik her</a>
     </div>
 
 </article>
 
-
+</main>
 
 
 
