--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Hiptro</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300|Roboto+Slab" rel="stylesheet">
 </head>
 <body>
 
@@ -36,14 +37,14 @@
     <!-- LINK TIL PRODUKTER -->
     <section class="linkfront pic1">
         <a href="shop.html">
-            <img src="images/shop.front.jpg" alt="link til shop">
+            <img src="images/shop.front.tekst.jpg" alt="link til shop">
         </a>
     </section>
 
     <!-- LINK TIL DIY -->
     <section class="linkfront pic2">
         <a href="diy.html">
-            <img src="images/DIY.front.jpg" alt="link til DIY">
+            <img src="images/diy.front.tekst.jpg" alt="link til DIY">
         </a>
     </section>
 
