--- a/shop.html
+++ b/shop.html
@@ -5,6 +5,7 @@
     <title>Shop</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300|Roboto+Slab" rel="stylesheet">
 </head>
 <body>
 <header class="header1">
